# movable-ref

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
examples/: basic_usage.rs  performance.rs
src/: error.rs  lib.rs  macros.rs  tests.rs
src/combinators/: self_ref_cell.rs
src/metadata/: impls.rs  mod.rs  trait_object.rs  traits.rs
src/offset/: delta.rs  integers.rs  mod.rs
src/pointer/: mod.rs  operations.rs  self_ref.rs  unreachable.rs
