[package]
name = "tether"
version = "0.1.0"
authors = ["Ali A. Hilal"]
repository = "https://github.com/engali94/tether"
description = "A tool for building movable self-referential types"
keywords = ["self-referential", "movable", "self-referential-types", "relative", "pointer", "ptr", "smart", "offset", "offset-pointer"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"
edition = "2021"

[features]
default = []
no_std = []
nightly = []

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[dependencies]

[[example]]
name = "performance"
